--- a/index.html
+++ b/index.html
@@ -6,9 +6,81 @@
     <title>Ticket</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <style>
+        body, html {
+            height: 100%;
+            background-color: #F5F5F5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Segoe UI', sans-serif;
+        }
+
+        .login-container {
+            background: white;
+            padding: 2.5rem;
+            border-radius: 1rem;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            width: 100%;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .login-container:hover {
+            box-shadow: 0 12px 28px rgba(0, 0, 0, 0.15);
+        }
+
+        h2 {
+            font-weight: 600;
+        }
+
+        .form-label {
+            font-weight: 600;
+            color: #37474F;
+        }
+
+        .form-control {
+            border-radius: 0.5rem;
+            border: 1px solid #cfd8dc;
+            transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        }
+
+        .form-control:focus {
+            border-color: #1976d2;
+            box-shadow: 0 0 0 0.15rem rgba(25, 118, 210, 0.25);
+        }
+
+        .btn-login {
+            background-color: #546e7a;
+            border: none;
+            color: white;
+            padding: 0.75rem;
+            border-radius: 0.5rem;
+            font-weight: 500;
+            transition: background-color 0.3s ease-in-out;
+        }
+
+        .btn-login:hover {
+            background-color: #546e7a;
+            color: #ffffff;
+        }
+    </style>
 </head>
 <body>
-<h1>Ticket</h1>
+<div class="login-container">
+    <h4 class="text-center mb-5">Inicio de Sesión</h4>
+    <form>
+        <div class="mb-3">
+            <label for="username" class="form-label">Usuario</label>
+            <input type="text" class="form-control" id="username" placeholder="Ingresa tu usuario" required />
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required />
+        </div>
+        <a href="src/views/pages/start.html" class="btn btn-login w-100">Iniciar sesión</a>
+    </form>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
