--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     <form>
         <div class="mb-3">
             <label for="username" class="form-label">Usuario</label>
-            <input type="text" class="form-control" id="username" placeholder="Ingresa tu usuario" required />
+            <input type="text" class="form-control" id="username" placeholder="" required />
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required />
+            <input type="password" class="form-control" id="password" placeholder="" required />
         </div>
         <a href="src/views/pages/start.html" class="btn btn-login w-100">Iniciar sesión</a>
     </form>
