--- a/index.html
+++ b/index.html
@@ -6,21 +6,33 @@
     <title>Ticket</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="src/assets/css/login.css">
 </head>
 <body>
-<div class="login-container">
-    <h4 class="text-center mb-5">Inicio de Sesión</h4>
+<div class="login-container shadow">
+    <div class="text-center mb-4">
+        <h3 class="fw-bold">IAML Ticket</h3>
+        <p class="text-muted">Inicio de Sesión</p>
+    </div>
     <form>
         <div class="mb-3">
             <label for="username" class="form-label">Usuario</label>
-            <input type="text" class="form-control" id="username" placeholder="" required />
+            <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
+                <input type="text" class="form-control" id="username" placeholder="Ingresa tu usuario" required/>
+            </div>
         </div>
-        <div class="mb-3">
+        <div class="mb-4">
             <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password" placeholder="" required />
+            <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-lock-fill"></i></span>
+                <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required/>
+            </div>
         </div>
-        <a href="src/views/pages/start.html" class="btn btn-login w-100">Iniciar sesión</a>
+        <a href="src/views/pages/start.html" class="btn btn-login w-100">
+            <i class="bi bi-box-arrow-in-right me-2"></i>Iniciar sesión
+        </a>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
