fix: tamaño de logo reducido en login 3

--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 <body>
 <div class="login-container shadow">
     <div class="text-center">
-        <img src="src/assets/img/logo.png" alt="Logo" class="mb-4" width="30%">
-    </div>
-    <div class="text-center mb-5">
-        <h4 class="text-muted fw-bold">Inicio de Sesión</h4>
+        <img src="src/assets/img/logo.png" alt="Logo" class="mb-4" width="150px">
     </div>
     <form>
         <div class="mb-3">
