--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 <body>
 <div class="login-container shadow">
     <div class="text-center">
-        <img src="src/assets/img/logo.png" alt="Logo" class="mb-4" width="150px">
+        <img src="src/assets/img/logo.png" alt="Logo" class="mb-4" width="120px">
     </div>
-    <form>
+    <div>
+        <div class="mb-3">
+            <label for="username" class="form-label">Identificador</label>
+            <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
+                <input type="number" class="form-control" id="userId" placeholder="Ingresa tu identificador" required/>
+            </div>
+        </div>
         <div class="mb-3">
             <label for="username" class="form-label">Usuario</label>
             <div class="input-group">
@@ -29,10 +36,10 @@
                 <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required/>
             </div>
         </div>
-        <a href="src/views/pages/start.html" class="btn btn-login w-100">
+        <button class="btn btn-login w-100" id="loginButton">
             <i class="bi bi-box-arrow-in-right me-2"></i>Iniciar sesión
-        </a>
-    </form>
+        </button>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -40,5 +47,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js"
         integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+"
         crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="src/utils/sweetAlert.js" type="module"></script>
+<script src="src/utils/toast.js" type="module"></script>
+<script src="src/utils/tokenValidation.js" type="module"></script>
+<script src="src/services/auth.js" type="module"></script>
 </body>
 </html>
